--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3"
 services: 
   redis: 
-    image: redis:alpine 
+    image: redis:alpine
     ports:
       - "6379"
     networks:
       - redis-net 
   backend:
-    image: helloapp
+    build: .
     ports:
       - "9090:9090"
     depends_on: 
@@ -15,10 +15,8 @@ services:
     networks:
       - redis-net
     restart: on-failure
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9090"]
-      interval: 10s
-      timeout: 5s
-      retries: 3
+    environment:
+      - REDIS_ADDRESS=redis:6379
+      - HTTP_ADDRESS=:9090
 networks: 
   redis-net:
